Preview badge fix, take 3: On smallest screens, set badge's margin to 0 to avoid overlap with logo on landing page (and Elements title on Elements page). Also limit logo size on landing page.

--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -39,6 +39,17 @@ dropdown-panel {
     height: $siteBannerHeightMinMobile;
   }
   
+  #dropdown-toggle {
+    height: 29px;
+    width: 29px;
+  }
+
+  #welcome {
+    a.logo {
+      max-width: 40%;
+    }
+  }
+
   .panel {
     margin: 0 30px !important;
     padding: $content-padding 0 40px 0 !important;
